[package]
name = "ndnblk"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version="4.5.51", features = ["derive"] }
tokio = { version="1.48.0", features = ["full"] }
reqwest = { version="0.12.24", features = ["json", "gzip", "deflate", "brotli", "rustls-tls", "http2", "socks"] }
futures = "0.3.31"
chrono = "0.4.42"
serde_json = "1.0.145"
log = "0.4.28"
rand_agents = "1.0.0"
log4rs = "1.4.0"
